--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,5 +5,6 @@
   <ul data-bind="foreach: search">
     <li data-bind="text: name"></li>
   </ul>
+  <button id="example">Make API request</button>
 </div>
 <div id="map"></div>
