--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
     <input type="text" placeholder="Filter" data-bind="textInput:query">
   </div>
   <ul data-bind="foreach: search">
-    <li data-bind="text: name"></li>
+    <li id="list-item" data-bind="text: name, click: openRestaurantMarkerFromList"></li>
   </ul>
 </div>
 <div id="map"></div>
