--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,11 @@
-<div>
-  <div id="search">
+<nav id="sidebar">
+  <h2 class="center margin-2">Paris Healthy Eating Guide</h2>
+  <hr>
+  <div id="search" class="margin-2">
     <input type="text" placeholder="Filter" data-bind="textInput:query">
   </div>
   <ul data-bind="foreach: search">
     <li id="list-item" data-bind="text: name, click: openRestaurantMarkerFromList"></li>
   </ul>
-</div>
+</nav>
 <div id="map"></div>
