feat: style map

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -63,6 +63,12 @@ input::selection {
   margin: 2rem;
 }
 
+.marker-name {
+  color: black;
+  font-weight: bold;
+  margin-bottom: 0.25rem;
+}
+
 hr {
   width: 20%;
   text-align: center;
